# tree-sitter-iml

./: .gitattributes  .gitignore  Makefile  README.md  package-lock.json  pyproject.toml  setup.py
.github/workflows/: ci.yml
bindings/python/: README.md
bindings/python/tree_sitter_ocaml/: __init__.py
docs/: how_tree-sitter-ocaml_Python_package_works.md
grammars/iml/: grammar.js  package.json
grammars/iml/src/: grammar.json  node-types.json  scanner.c
iml-query/: CHANGELOG.md  Makefile  pyproject.toml
iml-query/scripts/: decomp_query.py  parser_cli.py  run_query.py  run_query_1.py  run_query_2.py  top_appl_to_decomp.py  write_tree.py
iml-query/scripts/dev/: decomp_query.py  decomp_req.py  run_query_2.py  top_appl_to_decomp.py
iml-query/scripts/examples/: example.py
iml-query/src/iml_query/: __init__.py  format.py  processing.py  queries.py  query.py  tree_sitter_utils.py  utils.py
iml-query/src/iml_query/query/: __init__.py  query.py
iml-query/tests/: test_manipulation.py  test_manipulation_advanced.py  test_processing.py  test_query.py  test_tree_sitter.py
use-parser/: pyproject.toml
use-parser/scripts/: extract.py  run_query.py  use_ocaml.py
