[project]
name = "iml-query"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "hongyu", email = "hongyu@imandra.ai" }
]
requires-python = ">=3.10"
dependencies = [
    "devtools>=0.12.2",
    "rich>=14.1.0",
    "structlog>=25.4.0",
    "tree-sitter>=0.25.1",
    "tree-sitter-ocaml",
]

[tool.uv.sources]
tree-sitter-ocaml = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "inline-snapshot>=0.28.0",
    "pytest>=8.4.2",
]


[tool.ruff]
line-length = 80
fix = true
show-fixes = true
src = ["src"]
exclude = [
    "*.ipynb",
    "vendor/",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "RUF", # ruff-specific rules
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "PTH", # flake8-use-pathlib
    "SIM", # flake8-simplify
    "C90", # mccabe
    "D",   # pydocstyle
]
ignore = [
    "SIM108", # if-else-block-instead-of-if-exp
    "N801",   # Class name should use CapWords
    # "PTH123", # `open()` should be replaced by `Path.open()`
    "C417",   # Unnecessary `map()` usage (rewrite using a generator expression)
    "D100", # ignore missing docstring in module
    "D102", # ignore missing docstring in public method
    "D104", # ignore missing docstring in public package
    "D105", # ignore missing docstring in magic methods
    "D107", # ignore missing docstring in __init__ methods
]
flake8-quotes = { inline-quotes = "single", multiline-quotes = "double" }
mccabe = { max-complexity = 15 }
pycodestyle.ignore-overlong-task-comments = true
isort.combine-as-imports = true

[tool.ruff.lint.per-file-ignores]
"scripts/**/*.py" = ["F401", "RUF100", "D"]

[tool.ruff.format]
quote-style = "single"

[tool.ty]
environment.python = "../.venv"

[tool.pyright]
venvPath = ".."
venv = ".venv"
pythonVersion = "3.13"
typeCheckingMode = "strict"
reportMissingTypeStubs = false
reportUnnecessaryIsInstance = false
reportUnnecessaryTypeIgnoreComment = true
reportUnusedImport = "warning"
